adjusted video player positions

--- a/static/styles/homepage/blog-card.scss
+++ b/static/styles/homepage/blog-card.scss
@@ -47,6 +47,8 @@ a.blog-card-wrapper{
 }
 
 .blog-card{
+	color: initial;
+	background-color: #fff;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
