--- a/static/styles/homepage/index.scss
+++ b/static/styles/homepage/index.scss
@@ -28,7 +28,7 @@
 
 .section a.btn.btn-white-outlined{
     display: inline-block;
-    border: 1px solid var(--color-white);
+    border: 1px solid;
 		text-decoration: none;
     &:hover{
 			background-color: var(--color-white);
@@ -51,6 +51,7 @@
     height: 100%;
     padding: var(--space-md);
 	object-fit: contain;
+	background: #fff;
 	&:hover {
 		box-shadow: var(--shadow-sm);
       	transition: box-shadow .2s ease,transform .2s ease,z-index 0s 0s ease;
