allow admin and dev feedback for teams feature

--- a/views/help/forms/form_wish.hbs
+++ b/views/help/forms/form_wish.hbs
@@ -28,6 +28,7 @@
 		<option value="dashboard">Übersicht</option>
 		<option value="courses">Kurse</option>
 		<option value="classes">Klassen</option>
+		<option value="classes">Teams</option>
 		<option value="calendar">Termine</option>
 		<option value="homework">Aufgaben</option>
 		<option value="files">Meine Dateien</option>
