--- a/views/lib/forms/form-contactAdmin.hbs
+++ b/views/lib/forms/form-contactAdmin.hbs
@@ -22,6 +22,7 @@
             <option value="dashboard">Übersicht</option>
             <option value="courses">Kurse</option>
             <option value="classes">Klassen</option>
+            <option value="teams">Teams</option>
             <option value="calendar">Termine</option>
             <option value="homework">Aufgaben</option>
             <option value="files">Meine Dateien</option>
