--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -103,9 +103,9 @@
             <div class="panel-group notification-div">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4 class="panel-title">
+                        <h2 class="h4 panel-title">
                             <a data-toggle="collapse" href="#collapse1" class="collapse-toggle"><label>Benachrichtigungseinstellungen</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
-                    </h4>
+                    </h2>
                     </div>
                     <div id="collapse1" class="panel-collapse collapse">
 
@@ -136,9 +136,9 @@
                                     </tbody>
                                 </table>
                             {{else}}
-                                <h5 class="text-muted text-center">
+                                <h3 class="h5 text-muted text-center">
                                     <span>Keine Geräte eingetragen</span>
-                                </h5>
+                                </h3>
                             {{/if}}
                             <div class="panel-footer">
                                 <button type="button" class="btn btn-default btn-device"
@@ -178,9 +178,9 @@
 		<div class="panel-group oauth2-consents">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class="panel-title">
+					<h2 class="h4 panel-title">
 						<a data-toggle="collapse" href="#collapse2" class="collapse-toggle"><label>Drittanbieter-Logins</label><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></a>
-					</h4>
+					</h2>
 				</div>
 				<div id="collapse2" class="panel-collapse collapse">
 
@@ -202,9 +202,9 @@
 								</tbody>
 							</table>
 						{{else}}
-							<h5 class="text-muted text-center">
+							<h3 class=" h5 text-muted text-center">
 								<span>Keine Drittanbieter genutzt</span>
-							</h5>
+							</h3>
 						{{/if}}
 					</div>
 				</div>
