Administration doc structure

--- a/views/administration/teachers.hbs
+++ b/views/administration/teachers.hbs
@@ -36,9 +36,9 @@
 
                     <div class="row mb-2">
                         <div class="col-sm-12 no-padding">
-                            <h4>
+                            <h2 class="h4">
                                 Einverständniserklärung einholen
-                            </h4>
+                            </h2>
                             {{#if schoolUsesLdap}}
                                 <strong>Passwörter und Einverständniserklärung</strong>
 
