--- a/views/administration/forms/form-classes-manage.hbs
+++ b/views/administration/forms/form-classes-manage.hbs
@@ -55,16 +55,16 @@
     <hr class="my-2"/>
 
     <div class="mb-3">
-        <h4>Deine Schüler sind noch nicht in der {{theme.short_title}}?</h4>
+        <h2 class="h4">Deine Schüler sind noch nicht in der {{theme.short_title}}?</h2>
         <p>
             Lade die Eltern per Link ein, ihre Kinder in deiner Klasse zu registrieren und die elektronische Einwilligungserklärung abzugeben.
         </p>
     </div>
 
     <div class="mb-3">
-        <h4>
+        <h2 class="h4">
             Einverständniserklärung einholen
-        </h4>
+        </h2>
         {{#if schoolUsesLdap}}
             <strong>Schüler loggen sich in Anwesenheit eines Erziehungberechtigten ein</strong>
             
@@ -90,7 +90,7 @@
     </div>
 
     <div class="mb-3">
-        <h4>Einladungslink</h4>
+        <h2 class="h4">Einladungslink</h2>
         <input id="invitationLink" class="w-100" value="{{invitationLink}}" readonly/>
 
         <div class="clearfix">
@@ -100,7 +100,7 @@
     </div>
 
     <div>
-        <h4 class="mt-1">Bitte beachte:</h4>
+        <h2 class="h4 mt-1">Bitte beachte:</h2>
         <div class="row">
             <div class="col-sm-12">
                 <div id="accordion" role="tablist" aria-multiselectable="true">
