--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -54,7 +54,7 @@
 <hr>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
-        <h5>Nutzer-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="Geben Sie das Nutzerattribut an, in dem die folgenden Informationen in Ihrem LDAP verfügbar sind"></i></h5>
+        <h2 class="h5">Nutzer-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="Geben Sie das Nutzerattribut an, in dem die folgenden Informationen in Ihrem LDAP verfügbar sind"></i></h2>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <i id="user-section-toggle" class="fa fa-lock fa-3x"></i>
@@ -100,7 +100,7 @@
 <hr>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
-        <h5 id="headline-role-type">Rollen-Attribute</h5>
+        <h2 class="h5" id="headline-role-type">Rollen-Attribute</h2>
         <i id="description-role-attribute" class="fa fa-question-circle" data-toggle="tooltip" data-original-title="Welcher Wert in Ihrem zuvor definierten Rollen-Feld entspricht der genannten Rolle?"></i>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
@@ -140,7 +140,7 @@
     </div>
     <div class="row">
         <div class="form-group col-sm-6 col-xs-12">
-            <h5>Klassen-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="Geben Sie das Klassenattribut an, in dem die folgenden Informationen in Ihrem LDAP verfügbar sind"></i></h5>
+            <h2 class="h5">Klassen-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="Geben Sie das Klassenattribut an, in dem die folgenden Informationen in Ihrem LDAP verfügbar sind"></i></h2>
         </div>
         <div class="form-group col-sm-6 col-xs-12">
             <i id="class-section-toggle" class="fa fa-lock fa-3x"></i>
