Authentication doc structure update

--- a/views/authentication/forms/demo-login.hbs
+++ b/views/authentication/forms/demo-login.hbs
@@ -1,5 +1,5 @@
 <section class="demo-login mt-2" id="loginarea" data-step="1" data-intro="Sie möchten die {{theme.title}} entdecken? Mit Hilfe unserer Demo Funktion können Sie die {{theme.short_title}} sowohl aus Lehrer*in und Schüler*in Perspektive entdecken. (Fokus Demo Login)">
-    <h3 class="card-title">Jetzt ausprobieren</h3>
+    <h2 class="h3 card-title">Jetzt ausprobieren</h2>
     <div class="logins">
         <form method="post" action="/login/" class="form-demo-login">
             <input type="text" name="username" value="demo-schueler@schul-cloud.org" hidden>
