Courses doc structure update

--- a/views/courses/courseGroup.hbs
+++ b/views/courses/courseGroup.hbs
@@ -37,7 +37,7 @@
                     <i class="fa fa-plus" aria-hidden="true"></i>
                     <span class="hidden-lg-down">Thema hinzufügen</span>
                 </a>
-                <h4>Themen</h4>
+                <h2 class="h4">Themen</h2>
 
                 <div class="list-group">
                     {{#if lessons}}
@@ -74,7 +74,7 @@
         <!-- Done Submissions -->
         <div class="row section-course-group">
             <div class="col-sm-12 col-md-12">
-                <h4>getätigte Gruppenabgaben</h4>
+                <h2 class="h4">getätigte Gruppenabgaben</h2>
 
                 <div class="list-group">
                     {{#if doneSubmissions}}
@@ -95,7 +95,7 @@
         <!-- Open Submissions -->
         <div class="row section-course-group">
             <div class="col-sm-12 col-md-12">
-                <h4>offene (mögliche) Gruppenabgaben</h4>
+                <h2 class="h4">offene (mögliche) Gruppenabgaben</h2>
 
                 <div class="list-group">
                     {{#if openSubmissions}}
