--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -18,7 +18,7 @@
     {{#userHasPermission "COURSE_EDIT"}}
       <div class="dropdown dropdown-course minimal-button">
         <a class="btn btn-sm dropdown-toggle btn-course-dropdown" title="Weiteres" data-toggle="dropdown">
-          <h4 id="page-title" class="course-headline">{{{stripOnlyScript ../name}}}</h4>
+          <h2 class="h4" id="page-title" class="course-headline">{{{stripOnlyScript ../name}}}</h2>
           <i class="fa fa-cog i-cog"></i>
         </a>
         <div class="dropdown-menu dropdown-menu dropdown-menu-course">
