--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -3,7 +3,7 @@
         {{#if title}}
         <div class="row">
             <div class="col-sm-12">
-                <h5><a class="dashboard-title" href="{{href}}">{{title}}</a></h5>
+                <h2 class="h5"><a class="dashboard-title" href="{{href}}">{{title}}</a></h2>
             </div>
         </div>
         {{/if}}
