--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -19,12 +19,12 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 no-padding">
-                            <h5>
+                            <h2 class="h5">
                                 {{#each breadcrumbs}}
                                     <a class="{{#if @last}}active{{/if}}"
                                        href="{{this.url}}">{{{stripOnlyScript this.label}}}</a><span> / </span>
                                 {{/each}}
-                            </h5>
+                            </h2>
                             {{#if courseUrl}}
                                 <a href="{{courseUrl}}" class="btn btn-secondary pull-right">
                                     <i class="fa fa-graduation-cap"></i>
@@ -36,7 +36,7 @@
                 </div>
             </section>
             {{#if directories}}
-            <h6 style="padding: 1rem 0 1.5rem">Ordner</h6>
+            <h3 class="h6" style="padding: 1rem 0 1.5rem">Ordner</h3>
             <section class="directories">
                 <div class="row">
                     {{#each directories}}
@@ -70,7 +70,7 @@
                 </div>
             </section>
             {{/if}}
-            <h6 style="display: block; clear: both; padding: 1.5rem 0 1.5rem">Dateien</h6>
+            <h3 class="h6" style="display: block; clear: both; padding: 1.5rem 0 1.5rem">Dateien</h3>
             {{#embed "files/file-viewer"}}{{/embed}}
             {{#embed "files/files-grid" teamFiles=teamFiles}}{{/embed}}
 
