first login doc adjustments

--- a/views/firstLogin/sections/email.hbs
+++ b/views/firstLogin/sections/email.hbs
@@ -1,5 +1,5 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
-  <h4>Wie können wir dich erreichen?</h4>
+  <h2 class="h4">Wie können wir dich erreichen?</h2>
   <p>Bitte überprüfe deine E-Mail-Adresse:</p>
   <div class="row">
     <div class="form-group col-md-6 col-sm-12">
