--- a/views/firstLogin/sections/password.hbs
+++ b/views/firstLogin/sections/password.hbs
@@ -1,5 +1,5 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
-  <h4>Du hast es fast geschafft...</h4>
+  <h2 class="h4">Du hast es fast geschafft...</h2>
   {{#if @root.sso}}
     <p>Nach klicken des <u>Absenden</u>-Buttons kannst du dich wie gewohnt über das System deiner Schule (Moodle, iServ, ItsLearning etc.) in der {{@root.theme.title}} einloggen. </p>
   {{else}}
