--- a/views/firstLogin/welcome.hbs
+++ b/views/firstLogin/welcome.hbs
@@ -10,9 +10,9 @@
             {{#if isStudent}}
 
             {{else}}
-              <h5 class="text-muted text-center">
+              <h2 class="h5 text-muted text-center">
                   Mit der {{theme.short_title}} Unterricht digital gestalten
-              </h5>
+              </h2>
             {{/if}}
 
           </div>
