--- a/views/firstLogin/sections/birthdate_U14.hbs
+++ b/views/firstLogin/sections/birthdate_U14.hbs
@@ -1,5 +1,5 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
-  <h4>Geburtsdatum</h4>
+  <h2 class="h4">Geburtsdatum</h2>
   <p>Zur Vervollständigung deines Accounts benötigen wir noch dein Geburtsdatum:</p>
   <div class="row">
     <div class="form-group col-md-6 col-sm-12">
