--- a/views/firstLogin/sections/parent_data.hbs
+++ b/views/firstLogin/sections/parent_data.hbs
@@ -1,5 +1,5 @@
 <section data-panel="section-{{section-nr}}" {{#if submit-page}}class="submit-page"{{/if}}>
-  <h4>Ihre Daten</h4>
+  <h2 class="h4">Ihre Daten</h2>
   <p>Für Schüler unter 16 Jahren muss ein Erziehungsberechtigter in die Nutzung der {{@root.theme.short_title}} einwilligen.</p>
   <p>Dazu benötigen wir folgende Angaben von Ihnen:</p>
   <div class="row">
