--- a/views/firstLogin/sections/parent_intro.hbs
+++ b/views/firstLogin/sections/parent_intro.hbs
@@ -1,5 +1,5 @@
 <section data-panel="section-{{section-nr}}" class="parent_intro" data-next-label="als Erziehungsberechtigter fortfahren">
-  <h4>Einverständniserklärung eines Erziehungsberechtigten benötigt</h4>
+  <h2 class="h4">Einverständniserklärung eines Erziehungsberechtigten benötigt</h2>
   <p>Da du unter 16 Jahre alt bist, wird die Einverständniserklärung eines Elternteils benötigt, damit du die {{@root.theme.short_title}} nutzen kannst. 
     Die nächsten Schritte müssen von einem Erziehungsberechtigten durchgeführt werden.</p>
   <a href="/logout" class="btn btn-secondary">Beenden und später fortfahren</a>
