--- a/views/help/icon-card.hbs
+++ b/views/help/icon-card.hbs
@@ -5,7 +5,7 @@
                 <i class="fa fa-fw {{icon}}" aria-hidden="true"></i>
             </a>
         {{/if}}
-        <h4 class="icon-card__title">{{title}}</h4>
+        <h2 class="h4 icon-card__title">{{title}}</h2>
         <div class="icon-card__body">
             {{#block "card-body"}}{{/block}}
         </div>
