--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -47,9 +47,9 @@
                                                 aria-expanded="false" aria-controls="collapsable-{{this.id}}" type="button" tabindex="0">
                                                 <i class="fa fa-fw fa-chevron-right" aria-hidden="true" data-expand></i>
                                                 <i class="fa fa-fw fa-chevron-down" aria-hidden="true" data-collapse></i>
-                                                <h5>
+                                                <h2 class="h5">
                                                     {{this.title}}
-                                                </h5>
+                                                </h2>
                                             </button>
                                             <ul id="collapsable-{{this.id}}" class="collapse collapse__content">
                                                 {{#each this.articles}}
@@ -64,9 +64,9 @@
                                             <div class="collapse__title single">
                                                 <i class="fa fa-fw" aria-hidden="true"></i>
                                                 <a href="/help/confluence/{{this.id}}">
-                                                    <h5>
+                                                    <h2 class="h5">
                                                         {{this.title}}
-                                                    </h5>
+                                                    </h2>
                                                 </a>
                                             </div>
                                         </div>
