--- a/views/homework/evaluation.hbs
+++ b/views/homework/evaluation.hbs
@@ -47,7 +47,7 @@
                                 <label>Bewertung <small>in Prozent</small></label>
                                 <input type="number" min="0" max="100" class="form-control" name="grade" placeholder="95" value="{{this.submission.grade}}" />
                             </div>
-                            <h6>Kommentar</h6>
+                            <h2 class="h6">Kommentar</h2>
                             <textarea id="evaluation {{this.submission._id}}" name="gradeComment" type="text" class="form-control customckeditor" placeholder="Bewertungskommentar">{{this.submission.gradeComment}}</textarea>
                         </div>
                         {{#userHasPermission "HOMEWORK_CREATE"}}
