--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -7,7 +7,7 @@
 	{{/content}}
 	{{#content "page"}}
 	<div id="welcome-screen">
-		<h4>Willkommen zur Anmeldung in der {{theme.title}}!</h4>
+		<h2 class="h4">Willkommen zur Anmeldung in der {{theme.title}}!</h2>
 		<p>Je nach Alter des Schülers* verändert sich der Anmeldeprozess. Bei Schülern unter 16 muss ein Erziehungsberechtigter die nächsten Schritte durchführen, bei Schülern über 16 er selbst.</p>
 		<p>Bitte wähle das Alter des Schülers:</p>
 		<div class="form-group">
