--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -36,7 +36,7 @@
 												</div>
 												<div class="col-md-7">
 													<h2 class="person-title" data-lastname="{{lastName}}" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
-													<h4 class="person-desc" style="text-align: left">{{position}}</h4>
+													<h3 class="h4 person-desc" style="text-align: left">{{position}}</h3>
 													<p style="text-align: left">{{{description}}}</p>
 												</div>
 											</div>
