--- a/views/pwRecovery/pwrecovery.hbs
+++ b/views/pwRecovery/pwrecovery.hbs
@@ -19,8 +19,8 @@
                                 {{> "lib/components/notification"}}
                             </div>
                             <div class="text-center">
-                                <h3>{{title}}</h3>
-                                <h4>{{subtitle}}</h4>
+                                <h2 class="h3">{{title}}</h2>
+                                <h3 class="h4">{{subtitle}}</h3>
                             </div>
 
                             <div class="form-wrapper">
