Team doc structure update

--- a/views/teams/forms/form-file-permissions.hbs
+++ b/views/teams/forms/form-file-permissions.hbs
@@ -8,7 +8,7 @@
 </style>
 
 <div class="form-group">
-    <h4>Dateifreigabe-Einstellungen</h4>
+    <h2 class="h4">Dateifreigabe-Einstellungen</h2>
     <strong>Voreingestellte Zugriffsberechtigungen für neue Ordner und Dateien innerhalb des Teams:</strong>
     <br><br>
     <table class="team-file-permissions">
