--- a/views/teams/forms/form-invite-external-member.hbs
+++ b/views/teams/forms/form-invite-external-member.hbs
@@ -15,12 +15,12 @@
     {{!-- <p>Lade externe Experten ein, sich in der {{theme.short_title}} zu registrieren deinem Team beizutreten.</p> --}}
 
     {{!-- <h3>Externe einladen</h3> --}}
-    <h3 class="mt-2">Wen möchtest du ins Team einladen?</h3>
+    <h2 class="h3 mt-2">Wen möchtest du ins Team einladen?</h2>
     <button type="button" data-role="teacher" class="btn btn-set-role" >Lehrer anderer Schulen</button>
     <button type="button" data-role="expert" class="btn btn-set-role">Externe Experten</button>
 
     <div class="form-group mt-3" data-role="teacher">
-        <h3>Lehrer anderer Schulen einladen</h3>
+        <h2 class="h3">Lehrer anderer Schulen einladen</h2>
         <p>
             Wähle eine Lehrkraft anderer Schulen aus einem zentralen Verzeichnis aus oder gib die E-Mail-Adresse an, mit
             der sie registriert ist. Nach Beitritt zu deinem Team kann sie Schüler und
@@ -31,7 +31,7 @@
         <button type="button" data-method="email" class="btn btn-set-method" >per E-Mail einladen</button>
 
         <div class="form-group mt-3" data-method="directory">
-            <h3>Lehrer auswählen und hinzufügen</h3>
+            <h2 class="h3">Lehrer auswählen und hinzufügen</h2>
             <div class="form-group">
                 <label for="federalstate">Bundesland</label>
                 <select class="search-enabled" placeholder="Bundesland auswählen" data-force-value="true" data-placeholder="Bundesland auswählen" name="federalstate" id="federalstate">
@@ -65,7 +65,7 @@
         </div>    
 
         <div class="form-group mt-3" data-method="email">
-            <h3>Lehrer per E-Mail einladen</h3>
+            <h2 class="h3">Lehrer per E-Mail einladen</h2>
             <div class="form-group">
                 <label for="email">Gebe die E-Mail des Lehrers ein, an welchen die Einladung verschickt wird.</label>
                 <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
@@ -74,7 +74,7 @@
     </div>
 
     <div class="form-group mt-3" data-role="expert">
-        <h3>Externen Experten einladen</h3>
+        <h2 class="h3">Externen Experten einladen</h2>
         <div class="form-group">
             <label for="email">Gebe die E-Mail des Experten ein, an welchen die Einladung verschickt wird.</label>
             <input class="form-control" type="text" name="email" id="email" placeholder="E-Mail eingeben">
