--- a/views/teams/topics.hbs
+++ b/views/teams/topics.hbs
@@ -37,7 +37,7 @@
                             <span class="hidden-lg-down">Thema importieren</span>
                         </a>
                     {{/userHasPermission}}
-                    <h4>Themen</h4>
+                    <h2 class="h4">Themen</h2>
 
                     <div class="list-group">
                         {{#if lessons}}
@@ -140,7 +140,7 @@
                         <a href="/teams/{{../_id}}/tools/add" class="btn btn-secondary btn-sm pull-right ml-1" title="Neues Tool hinzufügen">
                             <i class="fa fa-plus" aria-hidden="true"></i><span class="hidden-md-down"> Neues Tool hinzufügen</span></a>
                         {{/userHasPermission}}
-                    <h4>Tools</h4>
+                    <h2 class="h4">Tools</h2>
 
                     <div class="list-group">
                         {{#if ltiToolIds}}
@@ -188,11 +188,11 @@
                         </a>
                     {{/userHasPermission}}
                     <a data-toggle="collapse" class="collapse-toggle" href="#courseGroups">
-                        <h4>
+                        <h2 class="h4">
                             <small title="Schülergruppen ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
                             {{#userHasPermission "COURSE_EDIT" }}Schülergruppen{{else}}Meine Schülergruppen{{/userHasPermission}}
                             <small>({{arrayLength courseGroups}} Gruppe{{#ifneq 1 (arrayLength courseGroups)}}n{{/ifneq}})</small>
-                        </h4>
+                        </h2>
                     </a>
                     {{!-- <div id="courseGroups" class="container-fluid collapse">
                         <ol class="courseGroup">
@@ -217,11 +217,11 @@
                     </a>
                     {{/userHasPermission}}
                     <a data-toggle="collapse" class="collapse-toggle" href="#homeworks">
-                        <h4>
+                        <h2 class="h4">
                             <small title="gestellte Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
                             Gestellte Aufgaben
                             <small>({{arrayLength homeworks}} Aufgabe{{#ifneq 1 (arrayLength homeworks)}}n{{/ifneq}})</small>
-                        </h4>
+                        </h2>
                     </a>
                     <div id="homeworks" class="container-fluid collapse">
                         <ol class="homework">
@@ -240,11 +240,11 @@
                     </a>
                 {{/userHasPermission}}
                     <a data-toggle="collapse" class="collapse-toggle" href="#myhomeworks">
-                        <h4>
+                        <h2 class="h4">
                             <small title="Meine Aufgaben ein/ausklappen"><i class="fa fa-chevron-right collapse-icon" aria-hidden="true"></i></small>
                             Meine Aufgaben
                             <small>({{arrayLength myhomeworks}} Aufgabe{{#ifneq 1 (arrayLength myhomeworks)}}n{{/ifneq}})</small>
-                        </h4>
+                        </h2>
                     </a>
                     <div id="myhomeworks" class="container-fluid collapse">
                         <ol class="homework">
