--- a/theme/open/views/authentication/home.hbs
+++ b/theme/open/views/authentication/home.hbs
@@ -27,7 +27,7 @@
                         <div class="card-block">
                             <div class="intro" data-step="1" data-intro="Hier kannst du einen Überblick über die Vorteile der Arbeit mit der HPI Schul-Cloud einsehen. Außerdem erhälst du hier allgemeine Informationen über unser Projekt.">
 
-                            <h4>Herzlich willkommen bei der {{theme.title}} !</h4>
+                            <h2 class="h4">Herzlich willkommen bei der {{theme.title}} !</h4>
                             <p>Das <a href="https://hpi.de/">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind. Dies ist die offene Instanz der HPI Schul-Cloud, über die einzelne Schulen Zugang zur Plattform erhalten können.</p>
                         <div>
                     </section>
@@ -39,7 +39,7 @@
 
                      <section id="jobs" class="card">
                         <div class="card-block">
-                            <h4 class="card-title">Stellenausschreibungen</h4>
+                            <h2 class="h4 card-title">Stellenausschreibungen</h2>
                             <div class="form-group">
                                 Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
                             </div>
