fix some links: 1) all external links with target and rel 2) internal links without target 3) mailto links with target 4) fix some links, indentations and stuff

--- a/theme/brb/views/imprint/imprint.hbs
+++ b/theme/brb/views/imprint/imprint.hbs
@@ -4,12 +4,11 @@
 	</h5>
 	<p>Prof.-Dr.-Helmert-Str. 2-3
 		<br /> 14482 Potsdam
-		<br /> Email:
-		<a href="mailto:info@schul-cloud.org">info@schul-cloud.org</a>
-		<br /> Internet:
-		<a href="https://schul-cloud.org" target="_blank" rel="noopener">https://schul-cloud.org</a>
+		<br /> Email: <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a>
+		<br /> Internet: <a href="https://schul-cloud.org" target="_blank" rel="noopener">https://schul-cloud.org</a>
 		<br /> Telefon: +49 (0)331 / 5509-0
-		<br /> Telefax: +49 (0)331 / 5509-129</p>
+		<br /> Telefax: +49 (0)331 / 5509-129
+	</p>
 	<h5>
 		<strong>Vertretungsberechtigter Gesch&auml;ftsf&uuml;hrer:</strong>
 	</h5>
@@ -114,6 +113,6 @@
 	<p><strong>HPI Schul-Cloud &ndash; Hasso-Plattner-Institut f&uuml;r Digital Engineering gGmbH</strong><br />
 		Prof.-Dr.-Helmert-Str. 2-3<br />
 		14482 Potsdam<br />
-		Email: <a href="mailto:datenschutz@schul-cloud.org">datenschutz@schul-cloud.org</a><br />
+		Email: <a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">datenschutz@schul-cloud.org</a><br />
 	</p>
 </div>
