--- a/theme/brb/views/lib/extended_footer.hbs
+++ b/theme/brb/views/lib/extended_footer.hbs
@@ -13,8 +13,8 @@
 			<div class="col-md-4">
 				<h4>Links</h4>
 				<ul>
-					<li><a href="/impressum" target="_blank" rel="noopener">Impressum</a></li>
-					<li><a href="/impressum#data_security" target="_blank" rel="noopener">Datenschutzerklärung</a></li>
+					<li><a href="/impressum">Impressum</a></li>
+					<li><a href="/impressum#data_security">Datenschutzerklärung</a></li>
 					<li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
 				</ul>
 			</div>
