--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -14,7 +14,7 @@
             </ul>
             <br/>
             <p>Das Projekt HPI Schul-Cloud ist im September 2016 in die 5-monatige Konzeptphase gestartet. Ab Mai 2017 startete die Pilotphase, in der zunächst 27 MINT-EC-Schulen die HPI Schul-Cloud testen und nutzen konnten. Im Mai 2018 begann die Roll-Out-Phase, in der die Nutzung der HPI Schul-Cloud stufenweise auf alle über 300 Schulen aus dem nationalen Excellence-Schulnetzwerks MINT-EC ausgeweitet wird. Derzeit können 100 MINT-EC Pilotschulen die HPI Schul-Cloud testen (Stand Mai 2019). <br/>
-            Auch unser <a href="https://schul-cloud.org/team">Team</a> wächst stetig!
+            Auch unser <a href="/team">Team</a> wächst stetig!
             </p>
             <video-player
                 configuration='{
