--- a/theme/n21/views/lib/extended_footer.hbs
+++ b/theme/n21/views/lib/extended_footer.hbs
@@ -4,15 +4,15 @@
             <div  class="col-md-4">        
                 <h4>Kontakt</h4>
                 <ul>
-                    <li>Allgemeine Anfragen: <a href="mailto:terhaseborg@n-21.de" target:"_blank">terhaseborg@n-21.de</a></li>
-                    <li>Support Anfragen: <a href="mailto:nbc-support@netz-21.de" target:"_blank">nbc-support@netz-21.de</a></li>
+                    <li>Allgemeine Anfragen: <a href="mailto:terhaseborg@n-21.de" target="_blank" rel="noopener">terhaseborg@n-21.de</a></li>
+                    <li>Support Anfragen: <a href="mailto:nbc-support@netz-21.de" target="_blank" rel="noopener">nbc-support@netz-21.de</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
                 <h4>Links</h4>
                 <ul>
-                    <li><a href="/impressum" target="blank">Impressum</a></li>
-                    <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
+                    <li><a href="/impressum">Impressum</a></li>
+                    <li><a href="https://github.com/schul-cloud/" target="_blank" rel="noopener">GitHub</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
