--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -25,7 +25,7 @@
                 Auf der <a href="https://www.mint-ec.de/schulnetzwerk/hpi-schul-cloud/mitmachen/" target="_blank">MINT-EC-Website</a> finden Schulen weitere hilfreiche Informationen für den Einstieg in die HPI Schul-Cloud, wie etwa Rahmenbedingungen zur Teilnahme,
                 Unterstützung bei der Anmeldung und Nutzung sowie Möglichkeiten das Pilotprojekt aktiv mitzugestalten. Bei Fragen wenden Sie sich gerne an das Team „HPI Schul-Cloud“ von MINT-EC:
                 <ul>
-                    <li>E-Mail: <a href="mailto:schul-cloud@mint-ec.de">schul-cloud@mint-ec.de</a></li>
+                    <li>E-Mail: <a href="mailto:schul-cloud@mint-ec.de" target="_blank" rel="noopener">schul-cloud@mint-ec.de</a></li>
                     <li>Telefon: +49 (0)30 400 067 47</li>
                 </ul>
 
@@ -37,7 +37,7 @@
                 Da uns bewusst ist, wie hoch die Nachfrage auch von anderen Schulen ist, sammeln wir momentan die Anfragen auf einer
                 Interessenliste und werden zu gegebener Zeit mit dem BMBF über eine weitere Öffnung sprechen. Falls Sie Interesse
                 an der Nutzung der HPI Schul-Cloud haben, senden Sie gerne folgende Informationen an
-                <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>:
+                <a href="mailto:schul-cloud@hpi.de" target="_blank" rel="noopener">schul-cloud@hpi.de</a>:
                 <ul>
                     <li>Name der Schule und Schulform</li>
                     <li>Geschwindigkeit des Internetanschlusses in Ihrer Schule</li>
@@ -46,7 +46,7 @@
                     <li>Anzahl der vorhandenen mobilen und webfähigen Endgeräte (Laptops, Tablets, etc.) oder ob der Bring-Your-Own-Device als Ansatz aktiv eingesetzt wird</li>
                 </ul>
             </p>
-            <p>Gerne können Sie außerdem <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/flyer/Schul-Cloud_Technische_Vorbereitungen.pdf" target="_blank">hier</a> einsehen, welche Hinweise bei der Vorbereitung auf eine mögliche HPI Schul-Cloud Nutzung helfen können.</p>
+            <p>Gerne können Sie außerdem <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/flyer/Schul-Cloud_Technische_Vorbereitungen.pdf" target="_blank" rel="noopener">hier</a> einsehen, welche Hinweise bei der Vorbereitung auf eine mögliche HPI Schul-Cloud Nutzung helfen können.</p>
             <br />
 		{{/content}}
 	{{/embed}}
@@ -67,22 +67,22 @@
             </p>
             <p>
                 Wenn Sie als Landesinitiative Interesse daran haben, mit der HPI Schul-Cloud zu kooperieren, wenden Sie sich gerne
-                an <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>.
+                an <a href="mailto:schul-cloud@hpi.de" target="_blank" rel="noopener">schul-cloud@hpi.de</a>.
             </p>
 		{{/content}}
 	{{/embed}}
 	{{#embed "authentication/section" class="content-width-max"}}
 		{{#content "body"}}
 			<h3 class="section-title center">Inhalteanbieter</h3>
-            <p>Wir freuen uns über Ihre Anfragen unter  <a href="mailto:inhalte@schul-cloud.org">inhalte@schul-cloud.org</a>.</p>
+            <p>Wir freuen uns über Ihre Anfragen unter  <a href="mailto:inhalte@schul-cloud.org" target="_blank" rel="noopener">inhalte@schul-cloud.org</a>.</p>
 
             <h4>Entwickler, Informatik AGs, ...</h4>
             <p>
                 Die {{theme.title}} ist ein Open-Source Projekt. Der Quellcode ist unter
-                <a href="https://github.com/schul-cloud" target="_blank">https://github.com/schul-cloud</a> zu finden.
-                Unser Ticketsystem liegt unter <a href="https://ticketsystem.schul-cloud.org" target="_blank">https://ticketsystem.schul-cloud.org</a>.
+                <a href="https://github.com/schul-cloud" target="_blank" rel="noopener">https://github.com/schul-cloud</a> zu finden.
+                Unser Ticketsystem liegt unter <a href="https://ticketsystem.schul-cloud.org" target="_blank" rel="noopener">https://ticketsystem.schul-cloud.org</a>.
                 Bei Bedarf kann auch eine Aufnahme in unseren Team-Messenger erfolgen.
-                Wir freuen uns über Bugfixes und neue Funktionen. Mehr Infos gerne bei <a href="mailto:jan.renz@hpi.de">jan.renz@hpi.de</a> erfragen.
+                Wir freuen uns über Bugfixes und neue Funktionen. Mehr Infos gerne bei <a href="mailto:jan.renz@hpi.de" target="_blank" rel="noopener">jan.renz@hpi.de</a> erfragen.
             </p>
             <a name="jobs"></a>
             <h4>Stellenausschreibungen im Projekt Schul-Cloud</h4>
