--- a/views/content/item.hbs
+++ b/views/content/item.hbs
@@ -31,14 +31,12 @@
     <div class="card-footer text-muted w-100">
         {{#userIsAllowedToViewContent nonOer}}
             <a class="pull-right report-link"
-                href="mailto:inhalte@schul-cloud.org?Subject=Melden%20des%20Inhaltes%20mit%20der%20ID%20{{{ ../_id }}}&body=Liebes%20{{theme.short_title}}%20Team%2C%0Ahiermit%20m%C3%B6chte%20ich%20den%20im%20Betreff%20genannten%20Inhalt%20melden%2C%20da%3A%0A%5Bhier%20bitte%20Ihre%20Gr%C3%BCnde%5D"
-                target="_blank">
+                href="mailto:inhalte@schul-cloud.org?Subject=Melden%20des%20Inhaltes%20mit%20der%20ID%20{{{ ../_id }}}&body=Liebes%20{{theme.short_title}}%20Team%2C%0Ahiermit%20m%C3%B6chte%20ich%20den%20im%20Betreff%20genannten%20Inhalt%20melden%2C%20da%3A%0A%5Bhier%20bitte%20Ihre%20Gr%C3%BCnde%5D" target="_blank" rel="noopener">
                 melden <i class="fa fa-flag" aria-hidden="true"></i>
             </a>
         {{else}}
             <a class="pull-right report-link"
-                href="mailto:inhalte@schul-cloud.org?Subject=Melden%20des%20Inhaltes%20mit%20dem%20Titel%20{{{ ../title }}}&body=Liebes%20{{theme.short_title}}%20Team%2C%0Ahiermit%20m%C3%B6chte%20ich%20den%20im%20Betreff%20genannten%20Inhalt%20melden%2C%20da%3A%0A%5Bhier%20bitte%20Ihre%20Gr%C3%BCnde%5D"
-                target="_blank">
+                href="mailto:inhalte@schul-cloud.org?Subject=Melden%20des%20Inhaltes%20mit%20dem%20Titel%20{{{ ../title }}}&body=Liebes%20{{theme.short_title}}%20Team%2C%0Ahiermit%20m%C3%B6chte%20ich%20den%20im%20Betreff%20genannten%20Inhalt%20melden%2C%20da%3A%0A%5Bhier%20bitte%20Ihre%20Gr%C3%BCnde%5D" target="_blank" rel="noopener">
                 melden <i class="fa fa-flag" aria-hidden="true"></i>
             </a>
         {{/userIsAllowedToViewContent}}
