--- a/views/imprint/imprint.hbs
+++ b/views/imprint/imprint.hbs
@@ -10,13 +10,12 @@
         HPI Schul-Cloud &ndash; Hasso-Plattner-Institut f&uuml;r Digital Engineering gGmbH
     </h3>
     <p>Prof.-Dr.-Helmert-Str. 2-3
-        <br /> 14482 Potsdam
-        <br /> Email:
-        <a href="mailto:info@schul-cloud.org">info@schul-cloud.org</a>
-        <br /> Internet:
-        <a href="https://schul-cloud.org" target="_blank" rel="noopener">https://schul-cloud.org</a>
-        <br /> Telefon: +49 (0)331 / 5509-0
-        <br /> Telefax: +49 (0)331 / 5509-129</p>
+		<br /> 14482 Potsdam
+		<br /> Email: <a href="mailto:info@schul-cloud.org" target="_blank" rel="noopener">info@schul-cloud.org</a>
+		<br /> Internet: <a href="https://schul-cloud.org" target="_blank" rel="noopener">https://schul-cloud.org</a>
+		<br /> Telefon: +49 (0)331 / 5509-0
+		<br /> Telefax: +49 (0)331 / 5509-129
+	</p>
     <h3>
         Vertretungsberechtigter Gesch&auml;ftsf&uuml;hrer:
     </h3>
@@ -102,7 +101,7 @@
     <p>Ihre persönlichen Daten werden vom HPI geschützt. Das HPI gibt keine personenbezogenen Daten an Dritte weiter, es sei denn, die Weitergabe erfolgt in Erfüllung einer gesetzlichen Verpflichtung (z. B. im Rahmen von strafrechtlichen Ermittlungen). In diesem Falle werden nur solche Informationen weitergegeben, zu denen Ihre Schule und das HPI gesetzlich verpflichtet sind.</p>
     <p>Aus technischen oder organisatorischen Gründen behält sich das HPI vor, einzelne Hosting-Dienstleistungen an Subunternehmer zu vergeben. In diesem Fall werden die Nutzer/innen hierüber in Kenntnis gesetzt. Das HPI verpflichtet sich dazu, die hinzugezogenen Subunternehmer sorgfältig auszuwählen und so dafür Sorge zu tragen, dass es zu keiner Schwächung des Datenschutzniveaus kommt.</p>
     <p>Für die Nutzung interaktiver Inhalte externer Anbieter (z. B. Schulbuchverlage) werden Pseudonyme eingesetzt, die den Inhalte-Anbietern keinerlei Rückschlüsse auf die realen Nutzer/innen der HPI Schul-Cloud zulassen. Die pseudonymisierten Daten über die Nutzung digitaler Angebote (bspw. Testfragen) können von den Inhalte-Anbietern anonymisiert ausgewertet und zur Verbesserung ihrer Inhalte und Produkte eingesetzt werden.</p>
-    <p>Ein Verzeichnis aller Empfänger personenbezogener Daten finden Sie <a href="https://s3.hidrive.strato.com/schul-cloud-hpi/Dokumente/Empfaenger.pdf">hier</a>.</p>
+    <p>Ein Verzeichnis aller Empfänger personenbezogener Daten finden Sie <a href="https://s3.hidrive.strato.com/schul-cloud-hpi/Dokumente/Empfaenger.pdf" target="_blank" rel="noopener">hier</a>.</p>
     <h3>
         8. Ihre Rechte
     </h3>
@@ -112,7 +111,7 @@
     <p>Hasso-Plattner-Institut <br />
         Prof.-Dr.-Helmert-Str. 2-3<br />
         14482 Potsdam<br />
-        Email: <a href="mailto:datenschutz@schul-cloud.org">datenschutz@schul-cloud.org</a><br/>
+        Email: <a href="mailto:datenschutz@schul-cloud.org" target="_blank" rel="noopener">datenschutz@schul-cloud.org</a><br/>
     </p>
 {{/content}}
     {{/embed}}
