Lib doc structure update

--- a/views/lib/components/modal.hbs
+++ b/views/lib/components/modal.hbs
@@ -5,7 +5,7 @@
                 <button type="button" class="close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">{{title}}</h4>
+                <h1 class="h4 modal-title">{{title}}</h1>
             </div>
             {{#block "body"}}{{/block}}
         </div>
