--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4">
-				<h4>Kontakt</h4>
+				<h2 class="h4">Kontakt</h2>
 				<ul>
 					<li>Allgemeine Anfragen: <span style="white-space: nowrap;"><a href="mailto:info@schul-cloud.org"
 								target="_blank">info@schul-cloud.org</a></span></li>
@@ -17,7 +17,7 @@
 				</ul>
 			</div>
 			<div class="col-md-4">
-				<h4>Links</h4>
+				<h2 class="h4">Links</h2>
 				<ul>
 					<li><a href="/impressum">Impressum</a></li>
 					<li>Datenschutzerklärung: <a href="/impressum#data_security">HPI</a> / <a
@@ -29,7 +29,7 @@
 				</ul>
 			</div>
 			<div class="col-md-4">
-				<h4>Mobile App</h4>
+				<h2 class="h4">Mobile App</h2>
 				<div class="android-app">
 					<a href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
 						target="_blank" rel="noopener">
@@ -37,7 +37,7 @@
 							src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png' height="70" />
 					</a>
 				</div>
-				<h4 class="card-title">Stellenausschreibungen</h4>
+				<h2 class="h4 card-title">Stellenausschreibungen</h2>
 				<div class="form-group">
 					Du möchtest gerne Mitglied in unserem <span style="white-space: nowrap;">HPI Schul-Cloud</span> Team werden?
 					Wir suchen:
