--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -186,7 +186,7 @@
                             <div class="col-sm-9">
                                 {{#unless notitle}}
                                   <div>
-                                      <h4 id="page-title">{{{stripOnlyScript title}}}</h4>
+                                      <h1 class="h4" id="page-title">{{{stripOnlyScript title}}}</h1>
                                   </div>
                                 {{/unless}}
                                 <div>
