--- a/views/administration/users_registrationcomplete.hbs
+++ b/views/administration/users_registrationcomplete.hbs
@@ -37,7 +37,7 @@
 <div class="row">
     <div class="col-xl-6">
         <p class="noprint">
-            Die Schüler können sich mit folgenden Daten an der {{@root.theme.short_title}} anmelden<br>
+            Die Anmeldung an der {{@root.theme.short_title}} ist mit den folgenden Daten möglich.
         </p>
         <p class="noprint">
             <b>Achtung: </b>Du kannst diese Seite nicht erneut aufrufen. Drucke dir also die angezeigten Zugangsdaten
@@ -85,13 +85,13 @@
         </div>
         <textarea disabled class="printable form-control" style="resize: none; height: 80px">
         {{fullname}}
-        E-Mail: {{email}} 
+        E-Mail: {{email}}
         Passwort: {{password}}</textarea>
         {{/each}}
-        <p class="noprint" style="margin-top: 1em">Beim ersten Login muss ein neues Passwort gewählt werden. Schüler,
-            die mindestens 14 Jahre
-            alt sind, müssen
-            beim ersten Login die Einwilligungserklärung zusätzlich selbst bestätigen. </p>
+        <p class="noprint" style="margin-top: 1em">
+            Beim ersten Login muss ein neues Passwort gewählt werden. Schüler,
+            die mindestens 14 Jahre alt sind, müssen bei ihrem ersten Login 
+            die Einwilligungserklärung zusätzlich selbst erklären. </p>
     </div>
 </div>
 <div class="row noprint">
